# Netrix

./: .gitignore  README.md
.github/scripts/: get_version_name.sh
.github/workflows/: build-release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/daemon/arm64-v8a/: nfqueue_daemon
app/src/main/assets/daemon/armeabi-v7a/: nfqueue_daemon
app/src/main/assets/daemon/x86_64/: nfqueue_daemon
app/src/main/cpp/: CMakeLists.txt  dpi_bypass.c  dpi_bypass.h  nfqueue_handler.c  nfqueue_handler.h  nfqueue_jni.c
app/src/main/cpp/daemon/: nfqueue_daemon.c
app/src/main/kotlin/com/enki/netrix/data/: SettingsRepository.kt
app/src/main/kotlin/com/enki/netrix/native/: DaemonController.kt  RootHelper.kt
app/src/main/kotlin/com/enki/netrix/ui/screens/: HomeScreen.kt  LogScreen.kt  SettingsScreen.kt  SplashScreen.kt
app/src/main/kotlin/com/enki/netrix/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/kotlin/com/enki/netrix/vpn/: LogManager.kt  UdpConnection.kt
app/src/main/kotlin/com/enki/removedpi/: DpiApplication.kt  MainActivity.kt
app/src/main/kotlin/com/enki/removedpi/data/: DpiSettings.kt
app/src/main/kotlin/com/enki/removedpi/native/: NfqueueBridge.kt  NfqueueService.kt  PacketCallback.kt
app/src/main/kotlin/com/enki/removedpi/ui/components/: Components.kt
app/src/main/kotlin/com/enki/removedpi/ui/screens/: WhitelistScreen.kt
app/src/main/kotlin/com/enki/removedpi/vpn/: BypassVpnService.kt  DpiBypass.kt  Packet.kt  QuickTileService.kt  TcpConnection.kt
app/src/main/res/drawable/: ic_netrix.xml  ic_netrix_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-tr/: strings.xml
gradle/: libs.versions.toml
